# BeachScene

./: CMakeLists.txt  README.md  README.txt  banner.frag  banner.vert  config.txt  explosion.frag  explosion.vert  perVertex.frag  perVertex.vert  semestralka.filters.txt  semestralka.sln  semestralka.vcxproj  semestralka.vcxproj.filters  skybox.frag  skybox.vert
Debug/: vc142.idb
Debug/Beach Scene.tlog/: Beach Scene.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
data/drone/: drone.mtl
data/ostrov/: coolIsland.mtl  island.mtl  islandDone.mtl  islandDoneV2.mtl
